[metadata]
name = msdss-base-api
version = 0.1.2
author = Richard Wen
author_email = rrwen.dev@gmail.com
description = Base API for the Modular Spatial Decision Support Systems (mSDSS) framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rrwen/msdss-base-api
project_urls =
    Bug Tracker = https://github.com/rrwen/msdss-base-api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir == src
packages = find:
install_requires = 
    fastapi
    uvicorn
python_requires = >=3.8

[options.packages.find]
where = src